Fix issue of spacing between the image and text in article and make title bold

--- a/src/components/app/base/AddPostModal/addPostModal.scss
+++ b/src/components/app/base/AddPostModal/addPostModal.scss
@@ -27,7 +27,7 @@
 .modal-title {
   color: $text-1;
   font-size: 25px;
-  font-weight: 400;
+  font-weight: bold;
   padding-left: 15px;
 }
 
